force-app/main/default/objects/Album__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Artist</label>
    <referenceTo>Artist__c</referenceTo>
    <relationshipLabel>Albums</relationshipLabel>
    <relationshipName>Albums</relationshipName>
    <type>Lookup</type>
</CustomField>