force-app/main/default/objects/Album__c/fields/Artist_ID__c.field-meta.xml
<CustomField>
    <fullName>Artist_ID__c</fullName>
    <externalId>true</externalId>
    <label>Artist ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>