force-app/main/default/objects/Album__c/fields/Cover__c.field-meta.xml
<CustomField>
    <fullName>Cover__c</fullName>
    <formula>if(ISBLANK(Picture__c), &apos;&apos;, IMAGE(Picture__c, &quot;Picture&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cover</label>
    <type>Text</type>
</CustomField>