force-app/main/default/objects/Album__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Rock</fullName>
            </value>
            <value>
                <fullName>Alternative/Indie</fullName>
            </value>
            <value>
                <fullName>Grunge</fullName>
            </value>
            <value>
                <fullName>New Wave</fullName>
            </value>
            <value>
                <fullName>Pop</fullName>
            </value>
            <value>
                <fullName>Pop Punk</fullName>
            </value>
            <value>
                <fullName>Rock</fullName>
            </value>
            <value>
                <fullName>Synth Pop</fullName>
            </value>
            <value>
                <fullName>Post Punk</fullName>
            </value>
            <value>
                <fullName>Glam Rock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>