force-app/main/default/objects/Album__c/fields/Record_Label__c.field-meta.xml
<CustomField>
    <fullName>Record_Label__c</fullName>
    <label>Record Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>