force-app/main/default/objects/Album__c/fields/Total_Tracks__c.field-meta.xml
<CustomField>
    <fullName>Total_Tracks__c</fullName>
    <label>Total Tracks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>