force-app/main/default/objects/Album__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Album</fullName>
            </value>
            <value>
                <fullName>EP</fullName>
            </value>
            <value>
                <fullName>Compilation</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>